[package]
name = "my-mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream="0.1"
bytes = "1"
atoi = "2"
tracing = "0.1.34"
async-stream = "0.3.0"